--- a/01.javascript/todoapp/assets/css/index.css
+++ b/01.javascript/todoapp/assets/css/index.css
@@ -1,3 +1,24 @@
+h1 {
+  text-align: center;
+}
+
+button {
+  border-radius: 50px;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+textarea,
+form {
+  border-radius: 5px;
+}
+
+footer {
+  text-align: center;
+}
+
 #detailPage {
   background: #d9d9d9;
   width: 360px;
@@ -46,9 +67,6 @@
   width: 100%;
 }
 
-button:hover {
-  cursor: pointer;
-
 .todolist {
   list-style: none;
   display: flex;
@@ -81,12 +99,4 @@ button:hover {
 .check {
   margin-right: 10px;
   width: 20px;
-}
-
-h1 {
-  text-align: center;
-}
-
-footer {
-  text-align: center;
 }
