--- a/01.javascript/todoapp/assets/css/index.css
+++ b/01.javascript/todoapp/assets/css/index.css
@@ -19,6 +19,19 @@ footer {
   text-align: center;
 }
 
+#content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 #detailPage {
   background: #d9d9d9;
   width: 360px;
@@ -69,6 +82,7 @@ footer {
 
 .todolist {
   list-style: none;
+  padding: 0;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -99,4 +113,12 @@ footer {
 .check {
   margin-right: 10px;
   width: 20px;
+}
+
+.enrollBtn {
+  border-radius: 50px;
+  border: none;
+  padding: 5px 16px;
+  width: 60px;
+  height: 30px;
 }
