--- a/01.javascript/todoapp/assets/css/index.css
+++ b/01.javascript/todoapp/assets/css/index.css
@@ -122,3 +122,43 @@ footer {
   width: 60px;
   height: 30px;
 }
+
+#content {
+  width: 300px;
+}
+.todolist,
+.list {
+  width: 100%;
+}
+#detailTodo {
+  background: #d9d9d9;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 10px 0;
+  margin-top: 10px;
+}
+#detailTitle,
+#detailContent {
+  background: #fff;
+  width: 90%;
+  border-radius: 5px;
+  padding: 4px;
+}
+
+#detailTitle {
+}
+
+#detailContent {
+  height: 100px;
+}
+
+.divWrapper {
+  display: flex;
+  justify-content: flex-end;
+  gap: 8px;
+  width: 100%;
+  margin-right: 20px;
+}
